Fix alignment for properties with multiple values.

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -764,13 +764,16 @@ body.vertical-menu footer {
 
 .inline .property {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   
   dt {
     @include xy-cell(4);
     text-align: right;
   }
   
-  .values {
+  .values,
+  .value {
     @include xy-cell(8);
   }
 }
